Updates to Header Template and Controller

--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,9 +1,17 @@
 <div class="container text-center" id="footer">
     <div class="row">
-        <ul class="list-inline" id="footer-menu">
+        <ul class="list-inline" id="footer-menu-links">
+            <li><a href="#">Contact</a></li>
+            <li>|</li>
             <li><a href="#">Privacy Policy</a></li>
             <li>|</li>
             <li><a href="#">Terms & Conditions</a></li>
+        </ul>
+    </div>
+    <div class="row">
+        <ul class="list-inline" id="footer-menu-social">
+            <li>Twitter</li>
+            <li>Facebook</li>
         </ul>
     </div>
     <div class="row" id="legal-line">
