--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,4 @@
 body {
-    align: center;
     padding: 50px 0 0 0;
     z-index: 0;
 }
@@ -11,38 +10,43 @@ body {
     color: white;
 }
 
+img {
+    margin-top: -10px;
+}
+
+.nav {
+    width: 90%;
+}
+
+#search-li {
+    width: 40%;
+}
+
+.navbar-form, #search-bar {
+    width: 100%;
+    border-radius: 50px;
+}
+
+@media only screen and (max-width: 768px) {
+    #search-li {
+        width: 100%;
+        margin-left: 12%;
+    }
+}
+
 #main-content {
     height: 400px;
 }
 
-.menu-btn {
-    height: 36px;
-    width: 36px;
-    margin: 7px 7px 0 0;
-}
-
-.container {
-    margin: 0 auto;
-}
-
 #footer {
     background: darkgray;
-    height: 80px;
+    height: 100px;
     width: 100%;
     padding: 20px 0 0 0;
-    margin: 0;
     color: white;
 }
 
-#footer-menu {
+#footer-menu-social, #footer-menu-links {
     list-style: none;
     display: inline;
-}
-
-#search-bar {
-    margin-top: 10px;
-    width: 100%;
-    height: 30px;
-    border-radius: 50px;
-    padding-left: 20px;
 }
