--- a/app/views/header.html
+++ b/app/views/header.html
@@ -16,9 +16,11 @@
                 <li><a href="#">Dapp Catalog</a></li>
                 <li><a href="#">Dapp News</a></li>
                 <li><a href="#">About</a></li>
-                <li id="search-li" class="text-center"><form class="navbar-nav navbar-form">
-                    <input type="search" class="form-control" id="search-bar" placeholder="Search Dapps..."></input>
-                </form></li>
+                <li id="search-li" class="text-center">
+                    <form class="navbar-nav navbar-form">
+                        <input type="search" class="form-control" id="search-bar" placeholder="Search Dapps..." ng-model="searchBox">
+                    </form>
+                </li>
             </ul>
         </div>
     </nav>
