Updates to view templates, build thumbnail

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,4 +10,14 @@
   </div>
 </div>
 <div class="container" id="main-content">
+  <div class="row" id="featured-row">
+    <h1>Featured</h1>
+    <ul id="featured-dapps">
+      <li class="thumbnail" id="list-item" ng-repeat=""
+    </ul>
+  </div>
+  <div class="row" id="popular-row">
+  </div>
+  <div class="row" id="latest-row">
+  </div>
 </div>
