--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -1,17 +1,14 @@
-<ul ng-repeat="result in results | {{search-filter}}">
-    <li class="thumbnail">
-        <img href="#" ng-source="{{result.logoImage}}" alt="Result Image"/>
-        <div class="caption">
-            <h3>{{result.name}}</h3>
-            <p>{{result.thumbnailDescription}}</p>
-            <hr>
-            <a href="#" class="btn btn-default" role="button" ng-model="!isFavorite = isFavorite">
-                <span class="glyphicon glyphicon-heart"></span>
-            </a>
-            <a href="#" class="btn btn-default" role="button">
-                {{result.numOfLikes}}
-                <span class="glyphicon glyphicon-thumbs-up"></span>
-            </a>
-        </div>
-    </li>
-</ul>
+<div class="thumbnail">
+    <img href="#" src="./images/logo.png" alt="Item Image"/>
+    <div class="caption">
+        <h3>{{$ctrl.name}}</h3>
+        <p>{{$ctrl.thumbnailDescription}}</p>
+        <hr>
+        <a href="#" class="btn btn-default" role="button">
+            <span class="glyphicon glyphicon-heart"></span>
+        </a>
+        <a href="#" class="btn btn-default" role="button">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+        </a>
+    </div>
+</div>
