--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -1,14 +1,17 @@
-<div class="thumbnail">
-    <img href="#" src="./images/logo.png" alt="Item Image"/>
+<li class="thumbnail text-center">
+    <img href="#" ng-src='{{$ctrl.logoImage}}' alt="Item Image"/>
     <div class="caption">
         <h3>{{$ctrl.name}}</h3>
-        <p>{{$ctrl.thumbnailDescription}}</p>
+        <h4 class="text-left">{{$ctrl.thumbnailDescription}}</h4>
         <hr>
-        <a href="#" class="btn btn-default" role="button">
-            <span class="glyphicon glyphicon-heart"></span>
-        </a>
-        <a href="#" class="btn btn-default" role="button">
-            <span class="glyphicon glyphicon-thumbs-up"></span>
-        </a>
+        <div class="button-row">
+            <a href="#" class="btn btn-default pull-left" role="button">
+                <span class="glyphicon glyphicon-heart"></span>
+            </a>
+            <a href="#" class="btn btn-default pull-right" role="button">
+                <span>{{$ctrl.numOfLikes}}</span>
+                <span class="glyphicon glyphicon-thumbs-up"></span>
+            </a>
+        </div>
     </div>
-</div>
+</li>
