--- a/app/components/dapps/dapps.html
+++ b/app/components/dapps/dapps.html
@@ -1,23 +1,3 @@
-<div class="jumbotron">
-  <!-- To be replaced with main carousel slider -->
-  <div class="container">
-      <div class="row">
-        <div class="col-xs-12 text-center">
-            <h1>Dapp Stack</h1>
-            <p>The info you need on Ethereum Dapps, top to bottom.</p>
-        </div>
-      </div>
-  </div>
-</div>
-<div class="container" id="main-content">
-  <div class="row" id="featured-row">
-    <h1>Featured</h1>
-    <ul id="featured-dapps" ng-repeat="dapp in dapps">
-      <dapp-results search-filter="featured='true'"></dapp-results>
-    </ul>
-  </div>
-  <div class="row" id="popular-row">
-  </div>
-  <div class="row" id="latest-row">
-  </div>
+<div class="list">
+    <dapp-list-item class="list-inline" ng-repeat="dapp in $ctrl.dapps" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" num-of-likes="dapp.numOfLikes"></dapp-list-item>
 </div>
