--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,3 +14,12 @@ body {
 #search-input {
     width: 100%;
 }
+
+.thumbnail {
+    width: 200px;
+    margin: 15px
+}
+
+.button-row {
+    height: 40px;
+}
