dialog box updates

--- a/app/components/dapps/dapp-dialog/dapp-dialog.html
+++ b/app/components/dapps/dapp-dialog/dapp-dialog.html
@@ -1,24 +1,15 @@
-<div id="DappDialog" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="windowTitleLabel">
-    <div class="modal-header">
-        <h3>Task List</h3>
-        </div>
-    <div class="modal-body">
-        <div class="tabbable"> <!-- Only required for left/right tabs -->
-        <ul class="nav nav-tabs">
-        <li class="active"><a href="#tab1" data-toggle="tab">Section 1</a></li>
-        <li><a href="#tab2" data-toggle="tab">Section 2</a></li>
-        </ul>
-        <div class="tab-content">
-        <div class="tab-pane active" id="tab1">
-            Data 1
-        </div>
-        <div class="tab-pane" id="tab2">
-        	<p>Data 2.</p>
-        </div>
-        </div>
-        </div>
-   </div>
-   <div class="modal-footer">
-         <a href="#" class="btn btn-primary" onclick="handleClose();">Close</a>
-   </div>
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h4 class="modal-title">{{$ctrl.name}}</h4>
+</div>
+<div class="modal-body" name="modalData">
+    <ul>
+        <li ng-repeat="item in $ctrl.items">
+            <a href="#" ng-click="$event.preventDefault(); this.selected.item = item">{{ item }}</a>
+        </li>
+    </ul>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+    <button type="submit" class="btn btn-success" data-dismiss="modal">Submit</button>
 </div>
