--- a/app/components/dapps/dapps.html
+++ b/app/components/dapps/dapps.html
@@ -1,3 +1,3 @@
 <div class="list">
-    <dapp-list-item class="list-inline" id="dapp-list" ng-repeat="dapp in $ctrl.dapps" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" num-of-likes="dapp.numOfLikes"></dapp-list-item>
+    <dapp-list-item id="dapp-list" ng-repeat="dapp in $ctrl.dapps" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" num-of-likes="dapp.numOfLikes"></dapp-list-item>
 </div>
