--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -1,17 +1,17 @@
-<li class="thumbnail text-center">
-    <img ng-src='{{$ctrl.logoImage}}' ng-click="$ctrl.open()" alt="Item Image"/>
-    <div class="caption">
+<li class="col-md-8">
+    <img class="col-xs-3" ng-src='{{$ctrl.logoImage}}' ng-click="$ctrl.open()" alt="Item Image"/>
+    <div class="caption col-xs-6">
         <h3>{{$ctrl.name}}</h3>
         <h4 class="text-left" id="thumbnail-desc">{{$ctrl.thumbnailDescription}}</h4>
         <hr>
-        <div class="button-row">
-            <a href="#" class="btn btn-default pull-left" role="button">
-                <span class="glyphicon glyphicon-heart"></span>
-            </a>
-            <a href="#" class="btn btn-default pull-right" role="button">
-                <span>{{$ctrl.numOfLikes}}</span>
-                <span class="glyphicon glyphicon-thumbs-up"></span>
-            </a>
-        </div>
+    </div>
+    <div class="button-section col-xs-2">
+        <a href="#" class="btn btn-default pull-left" role="button">
+            <span class="glyphicon glyphicon-heart"></span>
+        </a>
+        <a href="#" class="btn btn-default pull-right" role="button">
+            <span>{{$ctrl.numOfLikes}}</span>
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+        </a>
     </div>
 </li>
