--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -1,8 +1,8 @@
 <li class="col-md-8">
-    <img class="col-xs-3" ng-src='{{$ctrl.logoImage}}' ng-click="$ctrl.open()" alt="Item Image"/>
+    <img class="col-xs-3" ng-src='{{vm.logoImage}}' ng-click="vm.open()" alt="Item Image"/>
     <div class="caption col-xs-6">
-        <h3>{{$ctrl.name}}</h3>
-        <h4 class="text-left" id="thumbnail-desc">{{$ctrl.thumbnailDescription}}</h4>
+        <h3>{{vm.name}}</h3>
+        <h4 class="text-left" id="thumbnail-desc">{{vm.thumbnailDescription}}</h4>
         <hr>
     </div>
     <div class="button-section col-xs-2">
@@ -10,7 +10,7 @@
             <span class="glyphicon glyphicon-heart"></span>
         </a>
         <a href="#" class="btn btn-default pull-right" role="button">
-            <span>{{$ctrl.numOfLikes}}</span>
+            <span>{{vm.numOfLikes}}</span>
             <span class="glyphicon glyphicon-thumbs-up"></span>
         </a>
     </div>
