--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -1,4 +1,4 @@
-<li class="col-md-8">
+<li class="col-xs-12">
     <img class="col-xs-3" ng-src='{{vm.logoImage}}' ng-click="vm.open()" alt="Item Image"/>
     <div class="caption col-xs-6">
         <h3>{{vm.name}}</h3>
