--- a/app/components/dapps/dapp-dialog/dapp-dialog.html
+++ b/app/components/dapps/dapp-dialog/dapp-dialog.html
@@ -1,11 +1,40 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" ng-click="vm.cancel()">&times;</button>
-    <h4 class="modal-title">{{vm.dapp.name}}</h4>
+    <div class="col-xs-3">
+      <img class="col-xs-12" ng-src='{{vm.dapp.logoImage}}'/>
+    </div>
+    <div class="col-xs-6">
+      <h4 class="modal-title">{{vm.dapp.name}}</h4>
+      <p>{{vm.dapp.thumbnailDescription}}</p>
+    </div>
+    <div class="col-xs-3">
+      <ul class="list-unstyled list-inline">
+        <li ng-show="vm.hasSocial('facebook')">
+          <a class="dapp-social-links" href="{{vm.dapp.socialLinks.facebook}}">
+            <i class="fa fa-facebook-f fa-2x"></i>
+          </a>
+        </li>
+        <li ng-show="vm.hasSocial('twitter')">
+          <a class="dapp-social-links" href="{{vm.dapp.socialLinks.twitter}}">
+            <i class="fa fa-twitter fa-2x"></i>
+          </a>
+        </li>
+        <li ng-show="vm.hasSocial('reddit')">
+          <a class="dapp-social-links" href="{{vm.dapp.socialLinks.reddit}}">
+            <i class="fa fa-reddit-alien fa-2x"></i>
+          </a>
+        <li ng-show="vm.hasSocial('github')">
+          <a class="dapp-social-links" href="{{vm.dapp.socialLinks.github}}">
+            <i class="fa fa-github fa-2x"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
 </div>
 <div class="modal-body" name="modalData">
   <uib-tabset active="activeJustified" justified="true" type="tabs">
     <uib-tab index="0" heading="About">
-      <div>{{vm.dapp.name}}</div>
+      <div>{{vm.dapp.aboutContent}}</div>
     </uib-tab>
     <uib-tab index="1" heading="Stats">Placeholder for stats about the Dapp</uib-tab>
     <uib-tab index="2" heading="Discussion">Placeholder for discussion about the Dapp</uib-tab>
