--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -10,7 +10,7 @@
             <span class="glyphicon glyphicon-heart"></span>
         </a>
         <a href="#" class="btn btn-default pull-right" role="button">
-            <span>{{vm.numOfLikes}}</span>
+            <span>{{vm.likes}}</span>
             <span class="glyphicon glyphicon-thumbs-up"></span>
         </a>
     </div>
