profile page udpates

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,5 +19,9 @@ body {
     border-radius: 0px !important;
 }
 
-.dapp-social-links {
+.profile-header {
+    margin: 30px;
+    padding: 60px;
+    background: grey;
+    border-radius: 15px;
 }
