--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -2,4 +2,7 @@
     <div class="row">
         <dapps class="col-xs-12 col-sm-10 col-md-6"></dapps>
     </div>
+    <div>
+        <a ui-sref="app.dapps">Go to Dapps Muh Fucka</a>
+    </div>
 </div>
