--- a/app/components/profile/profile.html
+++ b/app/components/profile/profile.html
@@ -1,22 +1,28 @@
 <div class="container">
     <div class="row">
-        <div class="profile-header">
-            <div class="row text-center">
-                <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-                    <img id="profile-pic" class="img-responsive img-circle text-center" width="200px" height="200px" alt="profile picture" src="../../images/yeoman.png">
+        <div class="profile-header col-md-offset-1 col-md-10">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <img id="profile-pic" class="img-responsive img-circle" width="200px" height="200px" alt="profile picture" src="../../images/yeoman.png">
                 </div>
-                <div class="col-xs-12 col-sm-6">
-                    <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6 col-md-9">
+                    <div class="col-xs-12 col-md-10">
                         <h2>Austin Steed</h2>
                         <p>Handle</p>
                     </div>
-                    <div class="col-xs-12 col-sm-3">
-                        <p><a class="btn btn-primary btn-lg" href="#" role="button">Edit</a></p>
+                    <div class="col-xs-12 col-md-2">
+                        <a class="btn btn-primary btn-lg" href="#" role="button">Edit</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
+        <div class="profile-tabs col-xs-12 col-md-offset-1 col-md-10">
+            <uib-tabset active="0" justified="true">
+                <uib-tab index="0" heading="Favorites">Justified content</uib-tab>
+                <uib-tab index="1" heading="Activity">Short Labeled Justified content</uib-tab>
+            </uib-tabset>
+        </div>
     </div>
 </div>
