User authentication and modal

--- a/app/components/dapps/dapp-dialog/dapp-dialog.html
+++ b/app/components/dapps/dapp-dialog/dapp-dialog.html
@@ -34,7 +34,7 @@
 <div class="modal-body" name="modalData">
   <uib-tabset active="activeJustified" justified="true" type="tabs">
     <uib-tab index="0" heading="About">
-      <div>{{vm.dapp.aboutContent}}</div>
+      <dapp-about></dapp-about>
     </uib-tab>
     <uib-tab index="1" heading="Stats">Placeholder for stats about the Dapp</uib-tab>
     <uib-tab index="2" heading="Discussion">Placeholder for discussion about the Dapp</uib-tab>
