--- a/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
+++ b/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
@@ -1,3 +1,16 @@
-<div>
-<h4>test</h4>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 about-dapp-container">
+        {{vm.textForContent}}
+        </div>
+    </div>
+    <div class="row carousel-container">
+        <div uib-carousel active="{{vm.activeSlide}}" interval="{{vm.slideInterval}}" no-wrap="{{vm.noWrapSlides}}">
+            <div uib-slide ng-repeat="slide in vm.slides track by slide.id" index="slide.id">
+                <img ng-src="{{slide.image}}" style="margin:auto;">
+                <div class="carousel-caption">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
