--- a/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
+++ b/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
@@ -1,16 +1,12 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 about-dapp-container">
-        {{vm.textForContent}}
-        </div>
+<div class="row">
+    <div class="col-xs-10 col-xs-offset-1 about-dapp-container">
+    <p>{{vm.aboutContent}}</p>
     </div>
-    <div class="row carousel-container">
-        <div uib-carousel active="{{vm.activeSlide}}" interval="{{vm.slideInterval}}" no-wrap="{{vm.noWrapSlides}}">
-            <div uib-slide ng-repeat="slide in vm.slides track by slide.id" index="slide.id">
-                <img ng-src="{{slide.image}}" style="margin:auto;">
-                <div class="carousel-caption">
-                </div>
-            </div>
+</div>
+<div class="row carousel-container" style="height: 100%">
+    <div uib-carousel active="vm.activeSlide" interval="vm.slideInterval" no-wrap="vm.noWrapSlides">
+        <div uib-slide ng-repeat="slide in vm.aboutImages track by slide.id" index="slide.id">
+            <img ng-src="{{slide.image}}" style="margin:auto;">
         </div>
     </div>
 </div>
