--- a/app/components/dapps/dapps.html
+++ b/app/components/dapps/dapps.html
@@ -1,3 +1,8 @@
-<div class="list">
-    <dapp-list-item id="dapp-list" ng-repeat="dapp in vm.dapps" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" num-of-likes="dapp.numOfLikes"></dapp-list-item>
+<div class="col-xs-12 dapp-list">
+    <div class="dapp-list-header">
+        <h2>{{vm.heading}}</h2>
+    </div>
+    <ul class="list-group">
+        <dapp-list-item ng-repeat="dapp in vm.dapps" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" num-of-likes="dapp.numOfLikes"></dapp-list-item>
+    </ul>
 </div>
