--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,12 @@
 /* TODO: modularize all css into respective module directories */
 
+/* OVERALL STYLING */
 body {
     padding-top: 50px;
+    background: rgba(225,225,225,.5);
 }
 
+/* SEARCH FORM STYLES */
 #search-form {
     text-align: center;
     width: 60%;
@@ -15,10 +18,39 @@ body {
     width: 100%;
 }
 
+/* DAPP LIST ELEMENT STYLES */
+.dapp-list {
+    padding: 0;
+    width: 100%;
+    margin: 10px 0;
+}
+
+.dapp-list-header {
+    background: white;
+    margin: auto 0px -5px 0px;
+    border-left: .5px solid rgba(200,200,200,.4);
+    border-top: 1px solid rgba(200,200,200,.8);
+    border-right: 1px solid rgba(200,200,200,.4);
+    border-radius: 5px 5px 0 0;
+    padding: 0 0 10px 15px;
+
+}
+
+.dapp-list-container {
+    padding: 0;
+}
+
+.dapp-list-item {
+    padding: 15px 0;
+}
+
+/* DAPP MODAL STYLES */
 .modal-content{
     border-radius: 0px !important;
 }
 
+
+/* PROFILE STYLES */
 .profile-header {
     margin-top: 30px;
     padding: 40px;
@@ -37,3 +69,4 @@ body {
 #nav-profile-pic {
     border-radius: 50%;
 }
+
