--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -4,4 +4,7 @@
             <dapps heading="vm.heading" class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3"></dapps>
         </div>
     </div>
+    <div>
+        <a ui-sref="app.dapps">GO TO DAPPS</a>
+    </div>
 </div>
