--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -44,13 +44,15 @@ body {
     padding: 15px 0;
 }
 
-/* DAPP MODAL STYLES */
-.modal-content{
-    border-radius: 0px !important;
+/* DAPP DETAIL PAGE STYLES */
+.dapp-header {
 }
 
+.dapp-body {
 
-/* PROFILE STYLES */
+}
+
+/* PROFILE PAGE STYLES */
 .profile-header {
     margin-top: 30px;
     padding: 40px;
