--- a/app/components/dapp-catalog/dapp-catalog.html
+++ b/app/components/dapp-catalog/dapp-catalog.html
@@ -1,7 +1,10 @@
-<div class="container home-container">
-    <div class="row">
+<div class="container dapps-content-container">
+    <div class="col-xs-12 col-md-2 col-md-offset-1 filter-panel">
+        
+    </div>
+    <div class="col-xs-12 col-md-8 dapps-panel">
         <div class="col-xs-12 dapp-list-container">
-            <dapps heading="vm.heading" class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3"></dapps>
+            <dapps heading="vm.heading" filter="vm.query"></dapps>
         </div>
     </div>
 </div>
