--- a/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
+++ b/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
@@ -1,12 +1,12 @@
-<div class="row">
+<div class="row about-content-row">
     <div class="col-xs-10 col-xs-offset-1 about-dapp-container">
     <p>{{vm.aboutContent}}</p>
     </div>
 </div>
-<div class="row carousel-container" style="height: 100%">
-    <div uib-carousel active="vm.activeSlide" interval="vm.slideInterval" no-wrap="vm.noWrapSlides">
+<div class="row" style="height: 100%">
+    <div class="carousel-container" uib-carousel active="vm.activeSlide" interval="vm.slideInterval" no-wrap="vm.noWrapSlides">
         <div uib-slide ng-repeat="slide in vm.aboutImages track by slide.id" index="slide.id">
-            <img ng-src="{{slide.image}}" style="margin:auto;">
+            <img ng-src="{{slide.image}}" style="margin:auto;" class="img-rounded">
         </div>
     </div>
 </div>
