--- a/app/components/dapps/dapp-dialog/dapp-dialog.html
+++ b/app/components/dapps/dapp-dialog/dapp-dialog.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button type="button" class="close" ng-click="vm.goBack()">&times;</button>
+    <a type="button" class="close" ng-click="vm.goBack()">&times;</a>
     <div class="row">
       <div class="page-header dapp-header col-xs-12 col-sm-10 col-sm-offset-1">
         <div class="col-xs-3">
@@ -40,8 +40,7 @@
           <uib-tab index="0" heading="About" ui-sref="app.dappdetails.about">
             <dapp-about-component about-content="vm.dapp.aboutContent" about-images="vm.dapp.aboutImages"></dapp-about-component>
           </uib-tab>
-          <uib-tab index="1" heading="Stats">Placeholder for stats about the Dapp</uib-tab>
-          <uib-tab index="2" heading="Discussion">Placeholder for discussion about the Dapp</uib-tab>
+          <uib-tab index="1" heading="Discussion">Placeholder for discussion about the Dapp</uib-tab>
         </uib-tabset>
       </div>
     </div>
