--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -1,7 +1,7 @@
 <li class="col-xs-12 dapp-list-item list-group-item">
     <div class="col-xs-3 list-image-section">
         <a class="thumbnail" ui-sref="app.dapps.dappdetails({dappId: vm.dappId})" >
-            <img class="img-fluid img-thumbnail rounded" ng-src='{{vm.logoImage}}' alt="dapp logo"/>
+            <img class="img-fluid rounded" ng-src='{{vm.logoImage}}' alt="dapp logo" width="150" height="150">
         </a>
     </div>
     <div class="caption col-xs-9">
@@ -11,12 +11,15 @@
         </div>
         <div class="row">
             <div class="list-button-section text-right col-xs-12">
-                    <a href="#" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-heart"></span>
-                    </a>
-                    <a href="#" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-thumbs-up"></span>
-                    </a>
+                <a ng-click="vm.addFavorite(vm.dappId)" ng-disabled="!vm.loggedIn()" ng-show="vm.showFavorite" class="btn btn-default" role="button" uib-tooltip="Login to Favorite" tooltip-placement="top" tooltip-enable="!vm.loggedIn()">
+                    <span class="glyphicon glyphicon-heart"></span>
+                </a>
+                <a ng-show="!vm.showFavorite" class="btn btn-default" role="button" uib-tooltip="This dapp has been favorited." tooltip-placement="top" tooltip-enable="false">
+                    <span class="glyphicon glyphicon-ok"></span>
+                </a>
+                <a ng-click="vm.addLike(vm.dappId)" ng-disabled="!vm.loggedIn() || vm.disableLikes" class="btn btn-default" role="button" uib-tooltip="Login to like" tooltip-placement="top" tooltip-enable="!vm.loggedIn()">
+                    {{vm.likes}} <span class="glyphicon glyphicon-thumbs-up"></span>
+                </a>
             </div>    
         </div>
     </div>
