--- a/app/components/dapps/dapps.html
+++ b/app/components/dapps/dapps.html
@@ -1,8 +1,8 @@
-<div class="col-xs-12 dapp-list">
+<div class="dapp-list">
     <div class="dapp-list-header">
-        <h2>{{vm.heading}}</h2>
+        <h3>{{vm.heading}}</h3>
     </div>
     <ul class="list-group">
-        <dapp-list-item ng-repeat="dapp in vm.dapps" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" num-of-likes="dapp.numOfLikes"></dapp-list-item>
+        <dapp-list-item ng-repeat="dapp in vm.dapps | filter: vm.filter | limitTo: vm.limit | orderBy: vm.order" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" likes="dapp.likes"></dapp-list-item>
     </ul>
 </div>
