--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,10 +1,14 @@
-<div class="container home-container">
-    <div class="row">
-        <div class="col-xs-12 dapp-list-container">
-            <dapps heading="vm.heading" class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3"></dapps>
-        </div>
+<div class="jumbotron home-splash">
+    <div class="container jumbo-innards text-center">
+        <h2>We've Got DApps Covered, Top to Bottom</h2>
+        <h4>Welcome to DappStack</h4>
+        <p><a class="btn btn-primary btn-lg" ui-sref="app.search" role="button">Browse</a></p>
     </div>
-    <div>
-        <a ui-sref="app.dapps">GO TO DAPPS</a>
+</div>
+<div class="container-fluid home-container">
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 dapp-list-container">
+            <dapps heading="vm.heading" filter="" limit-to="-5" order-by=""></dapps>
+        </div>
     </div>
 </div>
