--- a/app/components/profile/profile.html
+++ b/app/components/profile/profile.html
@@ -1,28 +1,30 @@
 <div class="container">
-    <div class="row">
+    <div class="row" ng-show="vm.loggedIn">
         <div class="profile-header col-md-offset-1 col-md-10">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-3">
-                    <img id="profile-pic" class="img-responsive img-circle" width="200px" height="200px" alt="profile picture" src="../../images/yeoman.png">
+                    <img id="profile-pic" class="img-responsive img-circle" width="200px" height="200px" alt="profile picture" ng-src="/images/profile_placeholder.png">
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-9">
-                    <div class="col-xs-12 col-md-10">
-                        <h2>Austin Steed</h2>
-                        <p>Handle</p>
-                    </div>
-                    <div class="col-xs-12 col-md-2">
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Edit</a>
-                    </div>
+                    <h2>{{vm.user.firstName}} {{vm.user.lastName}}</h2>
+                    <p>{{vm.user.username}}</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="profile-tabs col-xs-12 col-md-offset-1 col-md-10">
-            <uib-tabset active="0" justified="true">
-                <uib-tab index="0" heading="Favorites">Justified content</uib-tab>
-                <uib-tab index="1" heading="Activity">Short Labeled Justified content</uib-tab>
-            </uib-tabset>
+    <div class="row profile-row-2" ng-show="vm.loggedIn">
+        <div class="profile-menu-area col-xs-12 col-md-offset-1 col-md-2">
+            <ul class="list-group">
+                <li class="list-group-item"><a ui-sref="app.profile.settings">Settings</a></li>
+                <li class="list-group-item"><a ui-sref="app.profile.favorites" ui-sref-active>Favorites</a></li>
+            </ul>
+        </div>
+        <div ui-view="profile-content" class="profile-content-area col-xs-12 col-md-8">
+        </div>
+    </div>
+    <div class="row text-center" ng-show="!vm.loggedIn">
+        <div class="access-restricted col-xs-12">
+            <h2>You are not logged in. Please log in to view your profile.</h2>
         </div>
     </div>
 </div>
