--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,14 +1,18 @@
-<div class="jumbotron home-splash">
-    <div class="container jumbo-innards text-center">
+<div class="jumbotron d-flex justify-content-center align-items-center home-splash">
+    <div class="text-center">
         <h2>We've Got DApps Covered, Top to Bottom</h2>
         <h4>Welcome to DappStack</h4>
         <p><a class="btn btn-primary btn-lg" ui-sref="app.search" role="button">Browse</a></p>
     </div>
 </div>
-<div class="container-fluid home-container">
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 dapp-list-container">
+<div class="container home-container">
+    <div class="row justify-content-center">
+        <div class="col col-lg-1">
+        </div>
+        <div class="col col-md-8 dapp-list-container">
             <dapps heading="vm.heading" filter="" limit-to="-5" order-by=""></dapps>
+        </div>
+        <div class="col col-lg-1">
         </div>
     </div>
 </div>
