--- a/app/components/profile/profile-settings/profile-settings.html
+++ b/app/components/profile/profile-settings/profile-settings.html
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <th>Profile Image</th>
-                <td>{{vm.user.profileImage}}</td>
+                <td>{{vm.uploader.queue.item.file.name}}</td>
             </tr>
         </table>
     </div>
@@ -54,8 +54,9 @@
             </div>
             <div class="form-group">
                 <label for="userProfilePic">Avatar Image</label>
-                <input type="file" id="userProfilePic" accept="image/*">
-                <p class="help-block">Upload a picture for your avatar (Not Currently Active).</p>
+                <input type="file" nv-file-select uploader="vm.uploader" filters="imageFilter">
+                <button ng-click="vm.uploader.uploadAll().onCompleteAll()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">upload</button>
+                <p class="help-block">Upload a picture for your avatar.</p>
             </div>
             <button type="submit" class="btn btn-default">Confirm</button>
         </form>
