--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,16 +12,40 @@ body {
     padding: 10%;
 }
 
-/* SEARCH FORM STYLES */
+/* NAVBAR STYLES */
+#navbarElements {
+    width: auto;
+}
+
 #search-form {
-    text-align: center;
-    width: 60%;
-    margin: auto;
-    margin-top: 9px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50%;
+}
+
+@media (max-width: 991px) {
+    #search-form {
+        position: relative;
+        margin: auto;
+        width: 80%;
+    }
 }
 
 #search-input {
     width: 100%;
+}
+
+.navbar-collapse {
+    width: 50%;
+}
+
+.navbar .navbar-toggler:focus, .navbar .navbar-toggler:hover{
+    background-color: transparent;
+}
+
+.navbar .navbar-toggler{
+    border-color: transparent;
 }
 
 /* HOMEPAGE STYLES */
@@ -33,13 +57,13 @@ body {
     background-size: cover;
 }
 
-.jumbo-innards {
-    height: 100%;
-    color: white;
-}
-
 .home-container {
     margin-bottom: 50px;
+}
+
+/*FOOTER STYLES*/
+#footer ul li {
+    margin: 0 10px;
 }
 
 /*DAPP CATALOG STYLES*/
@@ -138,4 +162,34 @@ body {
     margin-top: 20px;
 }
 
+/* COMMENTS STYLING */
+.comments-container {
+    margin: 10%;
+    border: 1px solid darkblue;
+    border-radius: 15px;
+}
 
+.text-box-top {
+    width:100%;
+    height: 100%;
+    margin: 10px 0 5px 0;
+    height: 100px;
+}
+
+.top-btn {
+    margin-top: 10px;
+}
+
+.comment-block {
+    border: 1px solid darkblue;
+    border-radius: 15px;
+    margin: 5px;
+}
+
+.children {
+    transform: translateX(-2%);
+}
+
+.button-list {
+    border: none;
+}
