--- a/app/index.ejs
+++ b/app/index.ejs
@@ -51,8 +51,8 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <!--<script src="../dist/bundle.js"></script>
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <!--<script src="app.bundle.js"></script>-->
+    <!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/tether/dist/js/tether.min.js"></script>
