--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -1,20 +1,22 @@
-<li class="list-group-item d-flex justify-content-between">
-    <div class="">
-        <a ui-sref="app.dapps.dappdetails({dappId: vm.dappId})">
-            <img class="img-thumbnail align-self-center" width="200" height="200" ng-src='{{vm.logoImage}}' alt="dapp logo">
-        </a>
-    </div>
+<!-- use of component as html element should include class card and set card width -->
+<div class="card h-100">
+    <a ui-sref="app.dapps.dappdetails({dappId: vm.dappId})">
+        <img class="card-img-top img-fluid" src="{{vm.logoImage}}" alt="Card image cap"> 
+    </a>
     <div class="card-block">
-        <h3 class="card-title mb-1">{{vm.name}}</h3>
-        <p class="card-text" id="thumbnail-desc">{{vm.thumbnailDescription}}</p>
-        <button ng-click="vm.addFavorite(vm.dappId)" ng-disabled="!vm.loggedIn()" ng-show="vm.showFavorite" class="btn btn-default" role="button" uib-tooltip="Login to Favorite" tooltip-placement="top" tooltip-enable="!vm.loggedIn()">
+        <h4 class="card-title">{{vm.name}}</h4>
+        <p class="card-text">{{vm.thumbnailDescription}}</p>
+    </div>
+    <div class="card-footer">
+        <button ng-click="vm.addFavorite(vm.dappId)" ng-disabled="!vm.loggedIn()" ng-show="vm.showFavorite" class="btn btn-default" role="button">
             <span class="fa fa-heart"></span>
         </button>
-        <button ng-show="!vm.showFavorite" ng-disabled="true" class="btn btn-default" role="button" uib-tooltip="This dapp has been favorited." tooltip-placement="top" tooltip-enable="false">
+        <button ng-show="!vm.showFavorite" ng-disabled="true" class="btn btn-default" role="button">
             <span class="fa fa-check"></span>
         </button>
-        <button ng-click="vm.addLike(vm.dappId)" ng-disabled="!vm.loggedIn() || vm.disableLikes" class="btn btn-default" role="button" uib-tooltip="Login to like" tooltip-placement="top" tooltip-enable="!vm.loggedIn()">
+        <button ng-click="vm.addLike(vm.dappId)" ng-disabled="!vm.loggedIn() || vm.disableLikes" class="btn btn-default" role="button" >
             <span class="fa fa-thumbs-up"></span>
         </button>
     </div>
-</li>
+</div>
+
