--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -5,14 +5,6 @@
         <p><a class="btn btn-primary btn-lg" ui-sref="app.search" role="button">Browse</a></p>
     </div>
 </div>
-<div class="container home-container">
-    <div class="row justify-content-center">
-        <div class="col col-lg-1">
-        </div>
-        <div class="col col-md-8 dapp-list-container">
-            <dapps heading="vm.heading" filter="" limit-to="-5" order-by=""></dapps>
-        </div>
-        <div class="col col-lg-1">
-        </div>
-    </div>
+<div class="container home-container justify-content-center">
+    <dapps class="container-fluid" heading="vm.heading" filter="" limit-to="-5" order-by=""></dapps>
 </div>
