--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -89,24 +89,13 @@ body {
 }
 
 /* DAPP LIST ELEMENT STYLES */
-.dapp-list {
-    padding: 0;
+.dapps-row {
+    overflow-x: auto;
+}
+
+.card-img-top {
+    height: 150px;
     width: 100%;
-}
-
-.dapp-list-header {
-    /*margin: auto 0px -5px 0px;*/
-    border-radius: 5px 5px 0 0;
-    padding: 0 0 5px 0;
-
-}
-
-.dapp-list-container {
-    padding: 0;
-}
-
-.dapp-list-item {
-    padding: 15px 0;
 }
 
 /* DAPP DETAIL PAGE STYLES */
