--- a/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
+++ b/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
@@ -1,12 +1,33 @@
-<div class="row about-content-row">
-    <div class="col-xs-10 col-xs-offset-1 about-dapp-container">
-    <p>{{vm.aboutContent}}</p>
+<div class="row pt-5 pb-5">
+    <div class="col-12 col-sm-10 offset-sm-1 about-dapp-container">
+        <p>{{vm.aboutContent}}</p>
     </div>
 </div>
-<div class="row" style="height: 100%">
-    <div class="carousel-container" uib-carousel active="vm.activeSlide" interval="vm.slideInterval" no-wrap="vm.noWrapSlides">
-        <div uib-slide ng-repeat="slide in vm.aboutImages track by slide.id" index="slide.id">
-            <img ng-src="{{slide.image}}" style="margin:auto;" class="img-rounded">
+<div class="row pb-5">
+    <div id="carousel-container" class="carousel slide about-slides" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-container" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-container" data-slide-to="1"></li>
+            <li data-target="#carousel-container" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item justify-content-center active">
+                <img class="d-block img-fluid about-image" ng-src="{{vm.aboutImages[0].image}}" alt="slide 1 image">
+            </div>
+            <div class="carousel-item justify-content-center">
+                <img class="d-block img-fluid about-image" ng-src="{{vm.aboutImages[1].image}}" alt="slide 2 image">
+            </div>
+            <div class="carousel-item justify-content-center">
+                <img class="d-block img-fluid about-image" ng-src="{{vm.aboutImages[2].image}}" alt="slide 3 image">
+            </div>
         </div>
+        <a class="carousel-control-prev" data-target="#carousel-container" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" data-target="#carousel-container" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 </div>
