Search Page Updates

--- a/app/components/dapps/dapps.html
+++ b/app/components/dapps/dapps.html
@@ -4,6 +4,6 @@
     </div>
 
     <div class="row flex-row flex-sm-nowrap justify-content-start dapps-row">
-        <dapp-list-item class="col-sm-4 col-lg-3 pt-3" ng-repeat="dapp in vm.dapps | filter: vm.filter | limitTo: vm.limit | orderBy: vm.order" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" likes="dapp.likes"></dapp-list-item>
+        <dapp-list-item class="col-sm-4 col-lg-3 pt-3" ng-repeat="dapp in vm.dapps" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" likes="dapp.likes"></dapp-list-item>
     </div>
 </div>
