--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -6,6 +6,6 @@
     </div>
 </div>
 <div class="container home-container justify-content-center">
-    <dapps class="container-fluid" heading="vm.heading1" filter="" limit-to="-5" order-by=""></dapps>
-    <dapps class="container-fluid" heading="vm.heading2" filter="" limit-to="-5" order-by=""></dapps>
+    <dapps class="container-fluid" heading="Latest" limit-to="10" order-by="created ASC"></dapps>
+    <dapps class="container-fluid" heading="Popular" limit-to="10" order-by="likes ASC"></dapps>
 </div>
