--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -68,7 +68,9 @@ body {
 }
 
 /*DAPP CATALOG STYLES*/
-
+.dapp-search-panel {
+    background: white;
+}
 
 /* DAPP LIST ELEMENT STYLES */
 .dapps-row {
