--- a/app/components/dapp-catalog/dapp-catalog.html
+++ b/app/components/dapp-catalog/dapp-catalog.html
@@ -1,15 +1,10 @@
-<div class="container-fluid dapps-content-container" style="background: grey;">
+<div class="container-fluid dapps-content-container" style="background: lightgrey;">
     <div class="row">
-        <div class="col-12 col-sm-3 dapps-sort-panel p-2" id="catalog-nav">
-
+        <div class="col-12 col-sm-3 mt-5">
+            <dapp-search-panel category="vm.category" on-category-change="vm.category = $event.category" tag=""></dapp-search-panel>
         </div>
         <div class="col-12 col-sm-9 mt-5 mb-5 dapps-view-panel">
-            <div ng-hide="vm.query == null" class="pl-2">
-                <h4 class="card-deck-title">{{vm.heading}}</h4>
-            </div>
-            <div class="card-deck">
-                <dapp-list-item class="col-sm-4 col-lg-3 pt-3" ng-repeat="dapp in vm.dapps | filter: vm.filter | limitTo: vm.limit | orderBy: vm.order" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" likes="dapp.likes"></dapp-list-item>
-            </div>
+            <dapp-results-panel category="vm.category" tag="vm.tag" query="vm.query"></dapp-results-panel>
         </div>
     </div>
 </div>
